fixed skills icon on mobile

--- a/css/index.css
+++ b/css/index.css
@@ -312,7 +312,7 @@
   gap: 1rem;
 } */
 
-@media (min-width: 385px) {
+@media (min-width: 450px) {
   /********** about rules **********/
   #about_section .skill_icon {
     grid-template-columns: repeat(auto-fill, minmax(175px, 1fr));
